duniverse/menhirLib.20200211/test/static/bad/uppercase-start.mly
%token FOO
%start Bla

%%

prod:
  x = X
    { () }

