duniverse/menhirLib.20200211/test/static/bad/uppercase-start.exp
File "uppercase-start.mly", line 2, characters 7-10:
Error: syntax error after '%start' and before 'Bla'.
Ill-formed '%start' declaration.
A start symbol must begin with a lowercase letter.
Examples of well-formed declarations:
  %start program
  %start expression phrase
  %start <int> date time
